fix(modal): adjust alert-message layout in dialogs
This fixes an issue introduced in a01e2bacbaeb9f7f4a77a4ed8aea9a5482a0e32c where the absolutely positioned warning icon would overlap with the text inside modals, because the text's padding was improperly stripped.

--- a/htdocs/luci-static/fluent/css/fluent.css
+++ b/htdocs/luci-static/fluent/css/fluent.css
@@ -1818,16 +1818,20 @@ body.modal-overlay-active #modal_overlay {
 }
 
 .modal .alert, .modal .alert-message {
+  padding: 0 0 0 calc(18px + var(--fluent-space-md)) !important;
   box-shadow: none !important;
   color: var(--fluent-text) !important;
   background: none !important;
   border: none !important;
   margin: 0 !important;
-  padding: 0 !important;
+  display: block !important;
 }
 
 .modal .alert:before, .modal .alert-message:before {
   margin-top: 2px !important;
+  position: absolute !important;
+  top: 0 !important;
+  left: 0 !important;
 }
 
 .modal h4, .modal .modal-header {
